--- a/doc/src/gnuclad-tips.texi
+++ b/doc/src/gnuclad-tips.texi
@@ -24,7 +24,7 @@ will be ignored.
 All nodes with a stopping date newer or the same as endOfTime will have
 their stopping date removed (unset == "still alive").
 
-For best results, the recommended optimisation is 0 and
+For best results with CSV output, the recommended optimisation is 0 and
 treeMode conf setting is "lower inverse":
 @example
   optimise = 0
@@ -45,6 +45,27 @@ which are not part of the tree. The higher it is, the more aggressively they
 will be appended to each other.
 The second digit sets the tree optimisation. Higher values will try to cramp the
 tree together more than lower ones.
+
+The current mapping looks as follows (although the exact parametrisation is
+subject to change).
+@example
+0   - off
+
+x1  - queue consecutive node lines in a "bubble fashion"; fast
+x3  - pull nodes to parent
+x6  - pull nodes towards root
+x8  - pull nodes towards root strongly
+
+1x  - inject single nodes among other single nodes in a greedy manner
+2x  - don't pass over trees of size >= 2
+5x  - don't pass over trees of size >= 5
+6x  - don't pass over trees of size >= 10
+7x  - don't pass over trees of size >= 20
+8x  - don't pass over trees of size >= 50
+9x  - don't pass over trees
+
+@end example
+
 
 @section Optimisation - additional info
 
