--- a/doc/src/version.texi
+++ b/doc/src/version.texi
@@ -1,4 +1,4 @@
-@set UPDATED 21 July 2010
+@set UPDATED 22 July 2010
 @set UPDATED-MONTH July 2010
-@set EDITION 0.1.x
-@set VERSION 0.1.x
+@set EDITION experimental-81
+@set VERSION experimental-81
