--- a/ToDo
+++ b/ToDo
@@ -8,11 +8,27 @@ without any warranty.
 ________________________________________________________________________
 
 
+invert pass-over-tree optimisation (low should get blocked more)
+
+generator/svg: replace reserved XML chars in label and description
+	# &amp; → 	& (ampersand, U+0026)
+	# &lt; → 	< (less-than sign, U+003C)
+	# &gt; → 	> (greater-than sign, U+003E)
+	# &quot; → 	" (quotation mark, U+0022)
+	# &apos; → 	' (apostrophe, U+0027)
+
+                                                                  v0.2.1
+________________________________________________________________________
+
+
+
+
 gnuclad-cladogram: grouping by connectors ("real parenting")
 gnuclad-cladogram: optimise both-subtree at creation time ?? (no)
 
 parser/dir: domain spacing
 generator/svg: domains along deriv lines (domainType 1)
+generator/svg: different fadeouts (fadeType)
 
 generator/svg: curved connectors ???
 generator/svg: transparent infobox ?
