--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,13 @@ without any warranty.
 
 ________________________________________________________________________
 
+
+2010.07.31 - version 0.2.1
+
+* Fixed four minor bugs
+
+
+
 2010.07.23 - version 0.2
 
 * Parse directories
