--- a/doc/src/version.texi
+++ b/doc/src/version.texi
@@ -1,4 +1,4 @@
-@set UPDATED 23 July 2010
+@set UPDATED 31 July 2010
 @set UPDATED-MONTH July 2010
-@set EDITION 0.2.x_testing-84
-@set VERSION 0.2.x_testing-84
+@set EDITION 0.2.1
+@set VERSION 0.2.1
