--- a/ToDo
+++ b/ToDo
@@ -7,6 +7,7 @@ without any warranty.
 
 ________________________________________________________________________
 
+Change documentation license from GFDL to Debian compatible
 
 gnuclad-cladogram: grouping by connectors ("real parenting")
 gnuclad-cladogram: optimise both-subtree at creation time?
@@ -15,13 +16,16 @@ gnuclad-cladogram: optimise both-subtree at creation time?
 gnuclad: implement ARGB in Color constructors
 generator/svg: implement matching transparency settings
 
+generator/svg: !fix: refractor/move many coordinate calculations to functions
 generator/svg: fix: yearline is(is it?) slighty off (down) with orientation=1
-generator/svg: fix: move many coordinate calculations to functions
+generator/svg: use CSS for styles (and check if it works in viewers like eog)
 generator/svg: domains along deriv lines (domainType 1)
 generator/svg: different fadeouts (fadeType)
 generator/svg: bigParent based only on direct children count (not size)
 generator/svg: curved connectors ???
 generator/svg: derivType like 2 but fill rect between line and parent
+generator/svg: add CSS3 text shadow option alternative to label background
+               (http://www.w3.org/Style/Examples/007/text-shadow)
 
 parser/dir: domain spacing
 parser/dir: symlink connectors
