--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copyright (C) 2010 Donjan Rodic <donjan@dyx.ch>
+Copyright (C) 2010-2011 Donjan Rodic <donjan@dyx.ch>
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
