passing on fixes from gnuclad 0.2.3

--- a/doc/man/gnuclad.1
+++ b/doc/man/gnuclad.1
@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH gnuclad 1 "FEBRUARY 2011" "gnuclad 0.2" "gnuclad man page"
+.TH gnuclad 1 "FEBRUARY 2011" "gnuclad 0.3 and higher" "gnuclad man page"
 .SH NAME
 gnuclad \- a cladogram generator
 .SH SYNOPSIS
