--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,14 @@ ________________________________________________________________________
 created with: bzr log --gnu-changelog
 
 
+2011-02-13  bryonak  <bryonak@freenet.de>
+
+	gnuclad 0.2.3 RELEASE
+	generator/conf.cpp:
+	fix: comments (thanks to Jean-François Fortin Tam)
+	doc/man/gnuclad.1:
+	improved man page
+
 2010-09-24  bryonak  <bryonak@freenet.de>
 
 	cosmetic changes
