--- a/doc/src/version.texi
+++ b/doc/src/version.texi
@@ -1,4 +1,4 @@
 @set UPDATED 27 August 2010
 @set UPDATED-MONTH August 2010
-@set EDITION 0.2.3
-@set VERSION 0.2.3
+@set EDITION 0.3-preview-95
+@set VERSION 0.3-preview-95
