--- a/doc/src/version.texi
+++ b/doc/src/version.texi
@@ -1,4 +1,4 @@
-@set UPDATED 27 August 2010
-@set UPDATED-MONTH August 2010
-@set EDITION 0.3-preview-95
-@set VERSION 0.3-preview-95
+@set UPDATED 1 April 2011
+@set UPDATED-MONTH April 2011
+@set EDITION 0.2.4
+@set VERSION 0.2.4
