--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,20 @@
+Copyright (C) 2010-2012 Donjan Rodic <donjan@dyx.ch>
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without any warranty.
+
+________________________________________________________________________
+
 Maintainer:
-  2010-2011  Donjan Rodic <donjan at dyx dot ch>
+  2010-2012  Donjan Rodic <donjan at dyx dot ch>
+
+Patches:
+  2010  Nicola Paoletti <nclpltt at gmail dot com>
+  2011  Ben Moss <>
+
+Testing:
+  2010-2011  Andreas Lundqvist
+  2010  Stéphane List
+  2011  Mohammed A. Mustafa
